Clean test JVM agent warnings